--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,14 @@ project(usbtmc C CXX)
 # Initialise the Pico SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
+# add the analyser library
+add_subdirectory(logicanalyser-lib)
 
+# Add executable. Default name is the project name, version 0.1
 add_executable(usbtmc 
         main.c 
         usb_descriptors.c 
         usbtmc_app.c 
-        rp2040-logic-analyzer.c
-        rp2040-logic-generator.c
         commands.c
 )
 
@@ -36,17 +36,13 @@ pico_set_program_version(usbtmc "0.1")
 pico_enable_stdio_uart(usbtmc 1)
 pico_enable_stdio_usb(usbtmc 0)
 
-# Add the standard library to the build
 target_link_libraries(usbtmc 
                 pico_stdlib
                 hardware_timer
-                hardware_pio 
                 hardware_dma
                 tinyusb_device 
                 tinyusb_board
-                )
-# PIO programs
-pico_generate_pio_header(usbtmc ${CMAKE_CURRENT_LIST_DIR}/usbtmc.pio)
+                logic_analyser
+)
 
 pico_add_extra_outputs(usbtmc)
-
