--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,11 @@
         }
     },
     "cmake.buildBeforeRun": true,
+    "cmake.configureSettings": {
+        "ENABLE_EEPROM": true,
+        "_WIFISSID": "ABC",
+        "_WIFIPWD": "12345"
+    },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
         "pwm.h": "c",
