--- a/apps/vxitmc/CMakeLists.txt
+++ b/apps/vxitmc/CMakeLists.txt
@@ -26,6 +26,7 @@ endif()
 
 target_include_directories(vxitmc PRIVATE 
     ${CMAKE_CURRENT_LIST_DIR} 
+    ${CMAKE_CURRENT_LIST_DIR}/include
     ${CMAKE_CURRENT_LIST_DIR}/..
 )
 
